<resources>
    <string name="app_name">SongBookX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_activity_card_full">activity_card_full</string>
    <string name="blue_name">blue_name</string>
    <string name="action_qr_code_scaner">QR code scanner</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_qr_code_generator">Generate QR code</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_qr_code_toast">Wrong QR code</string>
    <string name="about_version">Version</string>
    <string name="about_version_number">0.1</string>
    <string name="visit_website">Visit my fb page</string>
    <string name="about_mail">Whrite to mail</string>
    <string name="website_url">https://www.facebook.com/maksym.kyrpychnyk</string>
    <string name="upload_song">Upload</string>
    <string name="add_lyrics_dialog_text">Add your song</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="new_version_available">New version of app available</string>
    <string name="dowload">Dowload</string>
    <string name="add_group_dialog_text">Add new group</string>
    <string name="add_string">Add</string>
    <string name="public_string">public</string>
    <string name="private_string">private</string>
    <string name="action_sort">Sort by</string>
    <string name="sort_by_dialog_text">Sort by</string>
    <string name="sort_string">sort</string>
    <string name="main_group_text">Main group :</string>
    <string name="get_group_qr_code">Get group QR code</string>
    <string name="action_search">Search</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

</resources>
