<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="2"
        android:title="@string/action_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_qr_code_scaner"
        android:orderInCategory="1"
        android:icon="@drawable/ic_crop_free_black_24dp"
        android:title="@string/action_qr_code_scaner"
        app:showAsAction="ifRoom" />
</menu>
