<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_group_dialog_text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#565656"
        android:paddingTop="8dp"
        android:layout_marginBottom="16dp" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:hint="Name"
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_public"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/public_string"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:layout_height="60dp"
            android:text="@string/private_string"/>
    </RadioGroup>
</LinearLayout>